--- a/clientapp/package.json
+++ b/clientapp/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-router": "^7.0.2",
     "react-router-dom": "^7.0.2",
+    "react-signature-pad-wrapper": "^4.1.0",
     "xior": "^0.6.1"
   },
   "devDependencies": {
@@ -32,5 +33,6 @@
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
     "vite": "^6.0.1"
-  }
+  },
+  "proxy": "http://localhost:7172"
 }
